fixed the layout issues i had on the site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,24 @@
 /* Headings */
 
 .header {
+    border-bottom: 1px solid #777; 
+}
+
+.name {
     background-color: #4aaaa5; 
     color: white;
     font-family: 'Georgia', Times, "Times New Roman", serif;
     padding: 20px;
-    float: left;
+    /* float: left; */
     font-size: 2em;
+    width: 35%;
+    display: inline-block;
     font-weight: bold;
+    text-align: center;
 }
 
-.h1 {
-    width: 1280px;
+.clearfix {
+    clear: both;
 }
 
 h2{
@@ -23,6 +30,10 @@ h2{
     font-size: 1.5em;
 }
 
+.backgroundWhite {
+    background: #fff;
+}
+
 h3 {
     font-family: 'Georgia', Times, "Times New Roman", serif;
     color: #4aaaa5;
@@ -31,14 +42,12 @@ h3 {
 /* Navigation Bar */
 
 .links {
-    position: fixed;
-    display: inline;
     text-align: right;
-    float: right;
-    margin: 15px;
+    line-height: 80px;
     text-decoration: none;
-    color: #777777; 
-    
+    color: #777777;
+    display: inline-block;
+    float: right;
 }
 
 ul {
@@ -56,7 +65,7 @@ li a {
 
 .container {
     width: 960px;
-    margin: 0 auto;
+    margin: 0px auto;
     
 }
 
@@ -91,6 +100,7 @@ p {
 
 .content {
     clear: both;
+    margin-top: 10px;
 }
 
 .aboutme {
@@ -115,16 +125,17 @@ p {
 
 .social {
     width: 310px;
-    height: 100px;
     background-color: white;
-    float: left;
+    float: right;
     display: inline-block;
+    padding: 20px;
+    border: solid 1px #777;
+    margin-top: 13px;
 }
-
 /* Contact form */
 
 .form {
-    float: left;
+   
     width: 550px;
     height: 500px;
     color:#777777;
@@ -132,15 +143,49 @@ p {
     padding: 20px;
     background-color: white;
     display: inline-block;
+    float: left;
+    margin-top: 20px;
+}
+
+.content:after {
+    clear: both;
+    content:" ";
+    display:block;
 }
 
 /* Portfolio Images */
 
-.portfolio-images {
-    display: wrap;
-    margin: auto;
+.portfolio {
+    margin: 20px auto;
+    padding: 20px;
     width: 800px;
-    height: 600px;
+    height: 100%;
     background-color: white;
+    border: solid 1px #777;
 }
 
+.gallery-image {
+    display: inline-block;
+    background-color: white;
+    width: 350px;
+    padding: 20px;
+    position: relative;
+}
+
+.gallery-image img {
+    width: 100%;
+}
+
+.gallery-image .title {
+    position: absolute;
+    z-index: 2;
+}
+
+.title {
+    color: white;
+    background-color: #4aaaa5;
+    text-align: center;
+    width: 350px;
+    padding: 10px 0;
+    bottom: 15%;
+}
